@@ -1,5 +1,9 @@
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (consume): Documented function.
+
+2007-02-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (consume): Use tc to report consumed bytes 
 	in all cases.
 
